--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -175,10 +175,28 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909050818418_InitialModel.cs" />
+    <Compile Include="Migrations\201909050818418_InitialModel.Designer.cs">
+      <DependentUpon>201909050818418_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909050837491_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201909050837491_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201909050837491_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909050843377_AddMembershipType.cs" />
+    <Compile Include="Migrations\201909050843377_AddMembershipType.Designer.cs">
+      <DependentUpon>201909050843377_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201909050855126_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201909050855126_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201909050855126_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
@@ -261,6 +279,20 @@
     <None Include="packages.config" />
     <Content Include="Scripts\jquery-3.3.1.slim.min.map" />
     <Content Include="Scripts\jquery-3.3.1.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201909050818418_InitialModel.resx">
+      <DependentUpon>201909050818418_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909050837491_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201909050837491_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909050843377_AddMembershipType.resx">
+      <DependentUpon>201909050843377_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909050855126_PopulateMembershipTypes.resx">
+      <DependentUpon>201909050855126_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
