--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -227,9 +227,14 @@
     <Compile Include="Migrations\201909051225214_CustomerBirthdates.Designer.cs">
       <DependentUpon>201909051225214_CustomerBirthdates.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909051307495_MoviesAndGenreUpdate.cs" />
+    <Compile Include="Migrations\201909051307495_MoviesAndGenreUpdate.Designer.cs">
+      <DependentUpon>201909051307495_MoviesAndGenreUpdate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
@@ -299,6 +304,7 @@
     <Content Include="Views\Movies\Index.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -355,6 +361,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909051225214_CustomerBirthdates.resx">
       <DependentUpon>201909051225214_CustomerBirthdates.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909051307495_MoviesAndGenreUpdate.resx">
+      <DependentUpon>201909051307495_MoviesAndGenreUpdate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
