--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -231,6 +231,10 @@
     <Compile Include="Migrations\201909051307495_MoviesAndGenreUpdate.Designer.cs">
       <DependentUpon>201909051307495_MoviesAndGenreUpdate.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909100704424_movieIdTesti.cs" />
+    <Compile Include="Migrations\201909100704424_movieIdTesti.Designer.cs">
+      <DependentUpon>201909100704424_movieIdTesti.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -241,6 +245,7 @@
     <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
+    <Compile Include="ViewModels\NewMovieViewModel .cs" />
     <Compile Include="ViewModels\NewCustomerViewModel.cs" />
     <Compile Include="ViewModels\RandomMovieViewModel.cs" />
   </ItemGroup>
@@ -307,6 +312,7 @@
     <Content Include="Views\Customers\Details.cshtml" />
     <Content Include="Views\Movies\Details.cshtml" />
     <Content Include="Views\Customers\CustomerForm.cshtml" />
+    <Content Include="Views\Movies\New.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -366,6 +372,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909051307495_MoviesAndGenreUpdate.resx">
       <DependentUpon>201909051307495_MoviesAndGenreUpdate.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909100704424_movieIdTesti.resx">
+      <DependentUpon>201909100704424_movieIdTesti.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
