added form to register-page

--- a/Vidly/Vidly/Vidly.csproj
+++ b/Vidly/Vidly/Vidly.csproj
@@ -263,6 +263,10 @@
     <Compile Include="Migrations\201909151328244_SeedUsers.Designer.cs">
       <DependentUpon>201909151328244_SeedUsers.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201909151433303_AddDrivingLicenseToApplicationUser.cs" />
+    <Compile Include="Migrations\201909151433303_AddDrivingLicenseToApplicationUser.Designer.cs">
+      <DependentUpon>201909151433303_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
@@ -587,6 +591,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201909151328244_SeedUsers.resx">
       <DependentUpon>201909151328244_SeedUsers.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201909151433303_AddDrivingLicenseToApplicationUser.resx">
+      <DependentUpon>201909151433303_AddDrivingLicenseToApplicationUser.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
